# fay-prim

./: README.md  fay-prim.cabal
src/: FFI.hs  Prelude.hs
