name:                fay-prim
version:             0.1.0.0
synopsis:            A minimal base package for Fay, useful for testing Fay itself
description:         A minimal base package for Fay, useful for testing Fay itself
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark, Chris Done
maintainer:          adam@bergmark.nl
homepage:            https://github.com/faylang/fay-prim
bug-reports:         https://github.com/faylang/fay-prim/issues
copyright:           2012 Adam Bergmark, Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          src/Prelude.hs src/FFI.hs

source-repository head
  type: git
  location: https://github.com/faylang/fay-prim.git

library
  hs-source-dirs:    src
  exposed:           False
  exposed-modules:   Prelude
                    ,FFI
  build-depends: base == 4.*, fay >= 0.14.3.0
